--- a/login.html
+++ b/login.html
@@ -7,6 +7,13 @@
   
   <title>Login - Wonderland</title>
   
+  <!-- PWA Manifest -->
+  <link rel="manifest" href="/manifest.json">
+  <meta name="theme-color" content="#00aaff">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black">
+  <link rel="apple-touch-icon" href="/icon-192.png">
+  
   <!-- SweetAlert2 -->
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
@@ -34,7 +41,7 @@
     }
 
     body {
-      background: white;
+      background: black;
       display: flex;
       justify-content: center;
       align-items: center;
@@ -45,16 +52,16 @@
     .login-container {
       width: 100%;
       max-width: 400px;
-      background: #fff;
+      background: black;
       padding: 32px;
       border-radius: 16px;
       box-shadow: 0 8px 24px rgba(229, 9, 20, 0.12);
-      border: 2px solid #e50914;
+      border: 2px solid blue;
     }
 
     h2 {
       text-align: center;
-      color: #e50914;
+      color: blue;
       margin-bottom: 24px;
       font-size: 28px;
       font-weight: 800;
@@ -67,7 +74,7 @@
     label {
       display: block;
       margin-bottom: 8px;
-      color: #333;
+      color: white;
       font-weight: 600;
       font-size: 15px;
     }
@@ -75,7 +82,7 @@
     input {
       width: 100%;
       padding: 14px;
-      border: 1px solid #ddd;
+      border: 1px solid blue;
       border-radius: 10px;
       font-size: 16px;
       transition: all 0.3s;
@@ -102,11 +109,11 @@
 
     .remember input {
       margin-right: 8px;
-      accent-color: #e50914;
+      accent-color: blue;
     }
 
     .forgot {
-      color: #e50914;
+      color: blue;
       text-decoration: none;
       font-weight: bold;
     }
@@ -114,7 +121,7 @@
     .btn {
       width: 100%;
       padding: 16px;
-      background: #e50914;
+      background: blue;
       color: white;
       border: none;
       border-radius: 10px;
@@ -125,7 +132,7 @@
     }
 
     .btn:hover {
-      background: #c20817;
+      background: blue;
       transform: translateY(-2px);
     }
 
@@ -133,6 +140,27 @@
       opacity: 0.7;
       cursor: not-allowed;
       transform: none;
+    }
+
+    /* Install button */
+    #installAppBtn {
+      position: fixed;
+      bottom: 20px;
+      right: 20px;
+      background: #e50914;
+      color: white;
+      border: none;
+      border-radius: 50%;
+      width: 50px;
+      height: 50px;
+      display: none;
+      cursor: pointer;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.3);
+      z-index: 1000;
+    }
+
+    #installAppBtn i {
+      font-size: 20px;
     }
   </style>
 </head>
@@ -161,6 +189,67 @@
       <button type="submit" class="btn">Log In</button>
     </form>
   </div>
+
+  <!-- Install App Button -->
+  <button id="installAppBtn">
+    <i class="fas fa-download"></i>
+  </button>
+
+  <!-- Service Worker Registration & Notification Setup -->
+  <script>
+    // PWA Install Prompt
+    let deferredPrompt;
+    const installBtn = document.getElementById('installAppBtn');
+
+    window.addEventListener('beforeinstallprompt', (e) => {
+      // Prevent Chrome <= 67 from showing the install prompt automatically
+      e.preventDefault();
+      // Stash the event so it can be triggered later
+      deferredPrompt = e;
+      // Show install button
+      installBtn.style.display = 'flex';
+    });
+
+    installBtn.addEventListener('click', () => {
+      if (deferredPrompt) {
+        // Show the install prompt
+        deferredPrompt.prompt();
+        // Wait for the user to respond to the prompt
+        deferredPrompt.userChoice.then((choiceResult) => {
+          if (choiceResult.outcome === 'accepted') {
+            console.log('User accepted the install prompt');
+          } else {
+            console.log('User dismissed the install prompt');
+          }
+          // Clear the deferred prompt
+          deferredPrompt = null;
+          installBtn.style.display = 'none';
+        });
+      }
+    });
+
+    // Register service worker
+    if ('serviceWorker' in navigator) {
+      window.addEventListener('load', () => {
+        navigator.serviceWorker.register('/sw.js')
+          .then(reg => console.log('SW registered'))
+          .catch(err => console.warn('SW failed:', err));
+      });
+    }
+
+    // Request notification permission after login
+    function requestNotificationPermission() {
+      if (!("Notification" in window)) return;
+      if (Notification.permission === "granted") return;
+      if (Notification.permission !== "denied") {
+        Notification.requestPermission().then(permission => {
+          if (permission === "granted") {
+            console.log("Notification permission granted");
+          }
+        });
+      }
+    }
+  </script>
 
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
@@ -243,11 +332,13 @@
           return;
         }
 
-        // ✅ Success
+        // ✅ Success - Request notification permission
+        requestNotificationPermission();
+
         Swal.close();
         showBeautifulAlert('Success!', 'You are now logged in.', 'success');
         setTimeout(() => {
-          window.location.href = 'dashboard.html';
+          window.location.href = 'friends.html';
         }, 1500);
 
       } catch (error) {
